# intelligent-terminal

./: .wheel.sha256  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
src/ai_terminal/: main.py
